--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ Django = "^4.0.6"
 dj-database-url = "^0.5.0"
 python-dotenv = "^0.20.0"
 gunicorn = "^20.1.0"
-
+django-bootstrap4 = "^22.1"
 
 [tool.poetry.dev-dependencies]
 
