--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 django==4.0.6
+django-bootstrap4=22.1
 asgiref==3.5.2
 gunicorn==20.0.4
 python-dotenv==0.15.0
+beautifulsoup4==4.11.1
+soupsieve==2.3.2
+sqlparse==0.4.2
 dj-database-url
 psycopg2
