--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dj-database-url = "^0.5.0"
 python-dotenv = "^0.20.0"
 gunicorn = "^20.1.0"
 django-bootstrap4 = "^22.1"
+psycopg2= "^2.9.3"
+whitenoise = "6.2.0"
+
 
 [tool.poetry.dev-dependencies]
 
