add labels, multilang

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gunicorn = "^20.1.0"
 django-bootstrap4 = "^22.1"
 psycopg2= "^2.9.3"
 whitenoise = "6.2.0"
+django-filter = "^22.1"
 
 
 [tool.poetry.dev-dependencies]
