--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-bootstrap4 = "^22.1"
 psycopg2= "^2.9.3"
 whitenoise = "6.2.0"
 django-filter = "^22.1"
+rollbar = "^0.16.3"
 
 
 [tool.poetry.dev-dependencies]
