--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["NNbaur <studentsoftpu@gmail.com>"]
-
+packages = [
+    {include = "task_manager"},
+]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^4.0.6"
