add github actions, setup.cfg, reformat code for flake8

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -27,6 +27,7 @@ jobs:
           pip install whitenoise
           pip install django-filter
           pip install rollbar
+          pip install flake8
           make install
       - name: Run linter
         run:
