--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -18,6 +18,17 @@ jobs:
       - name: Install dependencies
         run:
           pip install poetry
+          pip install django
+          pip install dj-database-url
+          pip install python-dotenv
+          pip install gunicorn
+          pip install django-bootstrap4
+          pip install psycopg2
+          pip install whitenoise
+          pip install django-filter
+          pip install rollbar
+          pip install flake8
+          pip install coverage
           make install
       - name: Run linter
         run:
